--- a/static/style.css
+++ b/static/style.css
@@ -3,9 +3,31 @@
  * that contains the map. 
  */
  #map {
-    height: 100%;
+    height: 20%;
+    width: 20%;
   }
+
+.containerwhite {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em;
+  padding-left: 5%;
+  padding-right: 5%;
+  margin-top: 3em;
+}
   
+  
+.left-column {
+  width: 45%;
+  padding: 2%;
+}
+
+.right-column {
+  width: 45%;
+  padding: 2%;
+}
   /* 
    * Optional: Makes the sample page fill the window. 
    */
